--- a/README
+++ b/README
@@ -13,7 +13,7 @@ To install this module, run the following commands:
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2006 Robert Norris
+Copyright (C) 2006-2008 Robert Norris (rob@cataclysm.cx)
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
