--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-XML::Spice
-
-Blah blah
+XML::Spice - generating XML has never been so Perly!
 
 INSTALLATION
 
@@ -11,9 +9,16 @@ To install this module, run the following commands:
     ./Build test
     ./Build install
 
+or
+
+    perl Makefile.PL
+    make
+    make test
+    make install
+
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2006-2008 Robert Norris (rob@cataclysm.cx)
+Copyright (C) 2006-2009 Robert Norris (rob@cataclysm.cx)
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
