--- a/README
+++ b/README
@@ -18,7 +18,7 @@ or
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2006-2009 Robert Norris (rob@cataclysm.cx)
+Copyright (C) 2006-2010 Robert Norris (rob@eatenbyagrue.org)
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
