convert to dzil, prep for release

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
-Revision history for XML-Spice
+{{$NEXT}}
 
 0.01    2009-10-13
         First release
 
 0.02    2010-08-26
         Escape numerics
+
+0.03    2013-11-14
+        Handle "false" serialised values correctly
